--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
       <h1 class="sitename">Alex Smith</h1>
     </a>
 
-    <div class="social-links text-center">
-      <a href="x.com" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-    </div>
+   <div class="social-links text-center">
+  <a href="https://twitter.com" class="twitter" target="_blank"><i class="bi bi-twitter-x"></i></a>
+  <a href="https://facebook.com" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+  <a href="https://instagram.com/yourusername" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+  <a href="https://skype.com/yourusername" class="google-plus" target="_blank"><i class="bi bi-skype"></i></a>
+  <a href="https://linkedin.com/in/yourusername" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+</div>
+
 
     <nav id="navmenu" class="navmenu">
       <ul>
