--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
             </li>
             <li><a href="#">Dropdown 2</a></li>
             <li><a href="#">Dropdown 3</a></li>
-            <li><a href="#">Dropdown 4</a></li>
           </ul>
         </li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
@@ -96,10 +95,9 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Vine</h2>
-        <p>We're <span class="typed" data-typed-items="Innovative, Unique, Trustworthy, Amazing">Vine</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <h2>The Vine</h2>
+        <p>We're <span class="typed" data-typed-items="Smart, Bold, Creative, Chill, Reliable, Affordable, Curated, Youth-led"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
-
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
