--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>The Vine</h2>
+        <h2>The Vive</h2>
         <p>We're <span class="typed" data-typed-items="Smart, Bold, Creative, Chill, Reliable, Affordable, Curated, Youth-led"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
     </section><!-- /Hero Section -->
