--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>We are some cool kids trying to make a business.</p>
+        <p>We’re two student brothers running The Vive — a youth-led resale business focused on quality, affordability, and sustainability. While we stay behind the scenes, our goal is simple: help great items find new life.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
