--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
       <img src="assets/img/my-profile-img1.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+
+      <img src="assets/img/logo1.png" alt="">
       <h1 class="sitename">The Vive</h1>
     </a>
 
