--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
 
-      <img src="assets/img/logo1.png" alt="">
+      <img src="assets/img/logo1.png" alt="" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename">The Vive</h1>
     </a>
 
