--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/my-profile-img2.jpg" height="600" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
