--- a/index.html
+++ b/index.html
@@ -112,21 +112,20 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img2.jpg" height="450" alt="">
+            <img src="assets/img/my-profile-img2.jpg" height="200" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>A Brief Overviews</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+             The Vive gives quality pre-owned items a fresh start, making sustainable shopping easy and affordable. We provide links to our Vinted and eBay pages as well!
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Type:</strong> <span>Resale Brand</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Founded:</strong> <span>2025</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Online Only</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Products:</strong> <span>New York, USA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
