--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <img src="assets/img/my-profile-img2.jpg" height="200" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>A Brief Overviews</h2>
+            <h2>A Brief Overview</h2>
             <p class="fst-italic py-3">
-             The Vive gives quality pre-owned items a fresh start, making sustainable shopping easy and affordable. We provide links to our Vinted and eBay pages as well!
+             The Vive gives quality pre-owned items a fresh start, making sustainable shopping easy and affordable. We provide links to our Vinted and eBay pages as well.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -125,12 +125,12 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Type:</strong> <span>Resale Brand</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Founded:</strong> <span>2025</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Online Only</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Products:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Products:</strong> <span>Clothing, Books, Everyday Finds, Accesories</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Audiance</strong> <span>Students & Smart Shoppers</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
