--- a/index.html
+++ b/index.html
@@ -131,15 +131,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Audiance</strong> <span>Students & Smart Shoppers</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Mission:</strong> <span>Affordable, Sustainable, Reliable</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Platform:</strong> <span>Vinted, Ebay and More</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Run By:</strong> <span>Student Team</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+            We believe every item deserves a second chance, and every shopper deserves great value. That’s why we’re passionate about reducing waste and making smart, sustainable choices easy.
             </p>
           </div>
         </div>
