--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-star"></i>
-              <span data-purecounter-start="0" data-purecounter-end="More than 20" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Items resold</strong> <span></span>through multiple ways and our various platforms</p>
             </div>
           </div><!-- End Stats Item -->
@@ -173,7 +173,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-globe"></i>
-              <span data-purecounter-start="0" data-purecounter-end="More than 3" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Platforms used</strong> <span>and more coming soon</span></p>
             </div>
           </div><!-- End Stats Item -->
