--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-search"></i></div>
             <div>
-              <h4 class="title">Sourcing</h4>
+              <h4 class="title">Sourcing</a></h4>
               <p class="description">We carefully select pre-owned items with potential — from fashion to everyday finds.</p>
             </div>
           </div>
