--- a/index.html
+++ b/index.html
@@ -491,6 +491,72 @@
 
     </section><!-- /Services Section -->
 
+
+
+<!-- ======= FAQ Section ======= -->
+<section id="faq" class="faq section-bg">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h2><i class="bi bi-question-circle"></i> FAQs</h2>
+      <p>Got questions? Here are some answers to what people usually ask us.</p>
+    </div>
+
+    <div class="accordion" id="faqList">
+
+      <div class="accordion-item" data-aos="fade-up" data-aos-delay="100">
+        <h2 class="accordion-header" id="faq1">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+            Are the items new or used?
+          </button>
+        </h2>
+        <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="faq1" data-bs-parent="#faqList">
+          <div class="accordion-body">
+            All of our items are pre-owned and carefully selected for quality and condition.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item" data-aos="fade-up" data-aos-delay="200">
+        <h2 class="accordion-header" id="faq2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+            Where can I buy your products?
+          </button>
+        </h2>
+        <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="faq2" data-bs-parent="#faqList">
+          <div class="accordion-body">
+            You can shop our items on our Vinted and eBay pages — links are available on this site.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item" data-aos="fade-up" data-aos-delay="300">
+        <h2 class="accordion-header" id="faq3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+            Do you offer returns?
+          </button>
+        </h2>
+        <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="faq3" data-bs-parent="#faqList">
+          <div class="accordion-body">
+            As we sell via eBay and Vinted, return policies depend on the platform — please check the item listing before purchasing.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item" data-aos="fade-up" data-aos-delay="400">
+        <h2 class="accordion-header" id="faq4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+            How do you price items?
+          </button>
+        </h2>
+        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="faq4" data-bs-parent="#faqList">
+          <div class="accordion-body">
+            We price items fairly based on brand,
+
+
+
+    
+    
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section light-background">
 
