--- a/index.html
+++ b/index.html
@@ -491,8 +491,6 @@
 
     </section><!-- /Services Section -->
 
-
-
 <!-- ======= FAQ Section ======= -->
 <section id="faq" class="faq section-bg">
   <div class="container" data-aos="fade-up">
@@ -551,7 +549,15 @@
         </h2>
         <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="faq4" data-bs-parent="#faqList">
           <div class="accordion-body">
-            We price items fairly based on brand,
+            We price items fairly based on brand, condition, and original retail value.
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- End accordion -->
+  </div> <!-- End container -->
+</section> <!-- End FAQ Section -->
+
 
 
 
