--- a/index.html
+++ b/index.html
@@ -61,20 +61,10 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About us</a></li>
-        <li><a href="#portfolio"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
-        <li><a href="#services"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li><a href="#">FAQ's</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-question-circle toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Deep Dropdown 1</a></li>
-                <li><a href="#">Deep Dropdown 2</a></li>
-                <li><a href="#">Deep Dropdown 3</a></li>
-                <li><a href="#">Deep Dropdown 4</a></li>
-                <li><a href="#">Deep Dropdown 5</a></li>
-              </ul>
+        <li><a href="#aboutus"><i class="bi bi-person navicon"></i> About us</a></li>
+        <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
+        <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
+        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             </li>
             <li><a href="#">Dropdown 2</a></li>
             <li><a href="#">Dropdown 3</a></li>
