--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     </section><!-- /Services Section -->
 
 <!-- ======= FAQ Section ======= -->
-<section id="faq" class="faq section-bg">
+<section id="faq" class="faq section light-background">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
