--- a/index.html
+++ b/index.html
@@ -61,13 +61,10 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#aboutus"><i class="bi bi-person navicon"></i> About us</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> About us</a></li>
         <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
         <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            </li>
-            <li><a href="#">Dropdown 2</a></li>
-            <li><a href="#">Dropdown 3</a></li>
+        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span> </a></li>
           </ul>
         </li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
