--- a/index.html
+++ b/index.html
@@ -59,17 +59,22 @@
 
 
     <nav id="navmenu" class="navmenu">
-      <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About us</a></li>
-        <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
-        <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span> </a></li>
-          </ul>
-        </li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-      </ul>
-    </nav>
+  <ul>
+    <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i> Home</a></li>
+    <li><a href="#about"><i class="bi bi-person navicon"></i> About us</a></li>
+    <li><a href="#portfolio"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
+    <li><a href="#services"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
+
+    <!-- Dropdown -->
+    <li class="dropdown">
+      <a href="#"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span></a>
+      <!-- Add dropdown content here if needed -->
+    </li> <!-- ✅ Correctly closed here -->
+
+    <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+  </ul>
+</nav>
+
 
   </header>
 
