--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
 
     <nav id="navmenu" class="navmenu">
   <ul>
-    <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i> Home</a></li>
-    <li><a href="#about"><i class="bi bi-person navicon"></i> About us</a></li>
-    <li><a href="#portfolio"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
-    <li><a href="#services"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
+    <li><a href="#home" class="active"><i class="bi bi-house navicon"></i> Home</a></li>
+    <li><a href="#aboutus"><i class="bi bi-person navicon"></i> About us</a></li>
+    <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
+    <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
+    
 
     <!-- Dropdown -->
     <li class="dropdown">
-      <a href="#"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span></a>
+      <a href="#faq"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span></a>
       <!-- Add dropdown content here if needed -->
     </li> <!-- ✅ Correctly closed here -->
 
@@ -81,7 +82,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="home" class="hero section dark-background">
 
       <img src="assets/img/hero-bg1.jpg" alt="" data-aos="fade-in" class="">
 
@@ -92,7 +93,7 @@
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
+    <section id="aboutus" class="about section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -240,7 +241,7 @@
     </section><!-- /Skills Section -->
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section light-background">
+    <section id="featureditems" class="portfolio section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -415,7 +416,7 @@
     </section><!-- /Portfolio Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section">
+    <section id="ourprocess" class="services section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
