--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </section><!-- /Stats Section -->
 
     <!-- Skills Section -->
-    <section id="skills" class="skills section light-background">
+    <section id="skills" class="skills section bg">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
