--- a/index.html
+++ b/index.html
@@ -741,6 +741,33 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+<script>
+  async function copyImageToClipboard(imgId) {
+    const img = document.getElementById(imgId);
+    const canvas = document.createElement('canvas');
+    const ctx = canvas.getContext('2d');
+
+    await new Promise((resolve) => {
+      if (img.complete) return resolve();
+      img.onload = resolve;
+    });
+
+    canvas.width = img.naturalWidth;
+    canvas.height = img.naturalHeight;
+    ctx.drawImage(img, 0, 0);
+
+    canvas.toBlob(async (blob) => {
+      try {
+        await navigator.clipboard.write([
+          new ClipboardItem({ [blob.type]: blob })
+        ]);
+        alert("✅ Image copied to clipboard!");
+      } catch (err) {
+        alert("❌ Failed to copy image: " + err);
+      }
+    }, 'image/png');
+  }
+</script>
 
 </body>
 
