--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       </a>
 
       <!-- Copy icon - shown only on desktop -->
-      <a href="javascript:void(0);" onclick="copyImageToClipboard('appImage1')" class="copy-link d-none d-md-inline-block" title="Copy Image">
-        <i class="bi bi-clipboard"></i>
+      <a href="javascript:void(0);" onclick="copyImageToClipboard('appImage1')" class="copy-link d-none d-md-inline-block" class="bi bi-link-45deg" title="Copy Image">
+        <i class="bi bi-copy"></i>
       </a>
 
       <!-- Download icon - shown only on mobile -->
