--- a/index.html
+++ b/index.html
@@ -214,32 +214,17 @@
 
 
             
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-  <div class="portfolio-content h-100">
-    <!-- Image with ID so we can copy it -->
-    <img id="appImage1" src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="App 1">
-    
-    <div class="portfolio-info">
-      <h4>App 1</h4>
-      <p>Lorem ipsum, dolor sit amet consectetur</p>
+         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
-      <!-- Zoom Icon (for all devices) -->
-      <a href="assets/img/portfolio/app-1.jpg" title="Zoom In" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
-        <i class="bi bi-zoom-in"></i>
-      </a>
-
-      <!-- Copy icon - shown only on desktop -->
-      <a href="javascript:void(0);" onclick="copyImageToClipboard('appImage1')" class="copy-link d-none d-md-inline-block" class="bi bi-link-45deg" title="Copy Image">
-        <i class="bi bi-copy"></i>
-      </a>
-
-      <!-- Download icon - shown only on mobile -->
-      <a href="assets/img/portfolio/app-1.jpg" download class="d-inline-block d-md-none" title="Download Image">
-        <i class="bi bi-download"></i>
-      </a>
-    </div>
-  </div>
-</div><!-- End Portfolio Item -->
 
 
 
