--- a/index.html
+++ b/index.html
@@ -214,16 +214,25 @@
 
 
             
-         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+  <div class="portfolio-content h-100 position-relative">
+    <!-- The image -->
+    <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="App 1">
+
+    <!-- Centered Zoom Icon -->
+    <div class="portfolio-center-icon">
+      <a href="assets/img/portfolio/app-1.jpg" title="Zoom In" data-gallery="portfolio-gallery-app" class="glightbox">
+        <i class="bi bi-zoom-in"></i>
+      </a>
+    </div>
+
+    <!-- Bottom info -->
+    <div class="portfolio-info">
+      <h4>App 1</h4>
+      <p>Lorem ipsum, dolor sit amet consectetur</p>
+    </div>
+  </div>
+</div><!-- End Portfolio Item -->
 
 
 
