--- a/index.html
+++ b/index.html
@@ -213,26 +213,25 @@
 
 
 
-            
-   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
   <div class="portfolio-content h-100 position-relative">
-    <!-- The image -->
+    <!-- Image -->
     <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="App 1">
 
-    <!-- Centered Zoom Icon -->
-    <div class="portfolio-center-icon">
+    <!-- Centered zoom icon on image -->
+    <div class="icon-overlay">
       <a href="assets/img/portfolio/app-1.jpg" title="Zoom In" data-gallery="portfolio-gallery-app" class="glightbox">
         <i class="bi bi-zoom-in"></i>
       </a>
     </div>
 
-    <!-- Bottom info -->
+    <!-- Text Info Below -->
     <div class="portfolio-info">
       <h4>App 1</h4>
       <p>Lorem ipsum, dolor sit amet consectetur</p>
     </div>
   </div>
-</div><!-- End Portfolio Item -->
+</div>
 
 
 
