--- a/index.html
+++ b/index.html
@@ -214,24 +214,29 @@
 
 
 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-  <div class="portfolio-content h-100 position-relative">
-    <!-- Image -->
-    <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="App 1">
+  <div class="portfolio-content h-100">
+    
+    <!-- WRAP image + icon overlay in this new div -->
+    <div class="image-wrapper position-relative">
+      <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="App 1">
 
-    <!-- Centered zoom icon on image -->
-    <div class="icon-overlay">
-      <a href="assets/img/portfolio/app-1.jpg" title="Zoom In" data-gallery="portfolio-gallery-app" class="glightbox">
-        <i class="bi bi-zoom-in"></i>
-      </a>
+      <!-- Centered Icon -->
+      <div class="icon-overlay">
+        <a href="assets/img/portfolio/app-1.jpg" title="Zoom In" data-gallery="portfolio-gallery-app" class="glightbox">
+          <i class="bi bi-zoom-in"></i>
+        </a>
+      </div>
     </div>
 
-    <!-- Text Info Below -->
+    <!-- Text section below image -->
     <div class="portfolio-info">
       <h4>App 1</h4>
       <p>Lorem ipsum, dolor sit amet consectetur</p>
     </div>
+
   </div>
 </div>
+
 
 
 
@@ -769,6 +774,37 @@
     }, 'image/png');
   }
 </script>
+
+  <style>
+  .image-wrapper {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .icon-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+  }
+
+  .icon-overlay a {
+    font-size: 28px;
+    color: white;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 12px;
+    border-radius: 50%;
+    text-align: center;
+    display: inline-block;
+    transition: background 0.3s ease;
+  }
+
+  .icon-overlay a:hover {
+    background: #0d6efd;
+  }
+</style>
 
 </body>
 
