--- a/index.html
+++ b/index.html
@@ -215,32 +215,16 @@
 
 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
   <div class="portfolio-content h-100">
-
-    <!-- 🔧 Image + overlay icon wrapper -->
-    <div class="image-wrapper">
-      <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="App 1">
-
-      <!-- ✅ Centered Zoom Icon -->
-      <a href="assets/img/portfolio/app-1.jpg"
-         title="Zoom In"
-         data-gallery="portfolio-gallery-app"
-         class="glightbox icon-overlay">
-        <i class="bi bi-zoom-in"></i>
-      </a>
-    </div>
-
-    <!-- 📄 Text content below -->
+    <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
     <div class="portfolio-info">
       <h4>App 1</h4>
       <p>Lorem ipsum, dolor sit amet consectetur</p>
+      <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+        <i class="bi bi-zoom-in"></i>
+      </a>
     </div>
-
   </div>
 </div>
-
-
-
-
 
             
 
@@ -777,29 +761,39 @@
 </script>
 
   <style>
-  .image-wrapper {
-    position: relative;
-    width: 100%;
-  }
+.portfolio-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition: opacity 0.3s ease;
+}
 
-  .icon-overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 12px;
-    border-radius: 50%;
-    color: white;
-    font-size: 24px;
-    transition: background 0.3s ease;
-  }
+.portfolio-content:hover .portfolio-info {
+  opacity: 1;
+}
 
-  .icon-overlay:hover {
-    background: #0d6efd;
-  }
+.preview-link {
+  font-size: 28px;
+  color: white;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 12px;
+  border-radius: 50%;
+  transition: background 0.3s ease;
+}
+
+.preview-link:hover {
+  background: #0d6efd;
+}
 </style>
+
 
 
 </body>
