--- a/index.html
+++ b/index.html
@@ -760,7 +760,14 @@
   }
 </script>
 
- 
+ <style>
+   .portfolio-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+ </style>
 
 
 
