--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <ul>
     <li><a href="#home" class="active"><i class="bi bi-house navicon"></i> Home</a></li>
     <li><a href="#aboutus"><i class="bi bi-person navicon"></i> About us</a></li>
+    <li><a href="#shop"><i class="bi bi-cart navicon"></i> Shop</a></li>
     <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
     <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
     
@@ -140,6 +141,8 @@
 
     </section><!-- /About Section -->
 
+    
+
     <!-- Stats Section -->
     <section id="stats" class="stats section">
 
@@ -185,7 +188,44 @@
 
     </section><!-- /Stats Section -->
 
-   
+   <!-- ======= Shop Section ======= -->
+<section id="shop" class="shop-section section-bg py-5">
+  <div class="container text-center" data-aos="fade-up">
+    <h2 class="mb-4">Shop</h2>
+    <p class="mb-4">Visit our shops on eBay and Vinted to browse all our latest items!</p>
+
+    <div class="btn-group" role="group" aria-label="Shop links">
+      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="btn btn-primary d-flex align-items-center justify-content-center mx-2 px-4">
+        <img src="assets/img/ebay-logo.png" alt="eBay" style="height: 24px; margin-right: 8px;">
+        Visit eBay Shop
+      </a>
+      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="btn btn-success d-flex align-items-center justify-content-center mx-2 px-4">
+        <img src="assets/img/vinted-logo.png" alt="Vinted" style="height: 24px; margin-right: 8px;">
+        Visit Vinted Shop
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- Add this CSS to your style block or CSS file -->
+<style>
+.shop-section {
+  background-color: #f9f9f9;
+}
+.shop-section .btn {
+  font-weight: 600;
+  font-size: 1.1rem;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+}
+.shop-section .btn-primary:hover {
+  background-color: #004085;
+}
+.shop-section .btn-success:hover {
+  background-color: #19692c;
+}
+</style>
+
 
     <!-- Portfolio Section -->
     <section id="featureditems" class="portfolio section light-background">
@@ -760,14 +800,6 @@
   }
 </script>
 
- <style>
-   .portfolio-info {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
- </style>
 
 
 
