--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
 
     <div class="btn-group" role="group" aria-label="Shop links">
       <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="btn btn-primary d-flex align-items-center justify-content-center mx-2 px-4">
-        <img src="assets/img/ebay-logo.png" alt="eBay" style="height: 24px; margin-right: 8px;">
-        Visit eBay Shop
+        <img src="assets/img/ebay-logo.png" alt="" style="height: 24px; margin-right: 8px;">
+      
       </a>
       <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="btn btn-success d-flex align-items-center justify-content-center mx-2 px-4">
-        <img src="assets/img/vinted-logo.png" alt="Vinted" style="height: 24px; margin-right: 8px;">
-        Visit Vinted Shop
+        <img src="assets/img/vinted-logo.png" alt="" style="height: 24px; margin-right: 8px;">
+      
       </a>
     </div>
   </div>
