--- a/index.html
+++ b/index.html
@@ -188,42 +188,41 @@
 
     </section><!-- /Stats Section -->
 
-   <<!-- ======= Shop Section ======= -->
+  <!-- ======= Shop Section ======= -->
 <section id="shop" class="shop-section section-bg py-5">
   <div class="container text-center" data-aos="fade-up">
     <h2 class="mb-4">Shop</h2>
-    <p class="mb-4">Visit our shops on eBay and Vinted to browse all our latest items!</p>
+    <p class="mb-4">Check out our products on these platforms:</p>
 
     <div class="d-flex justify-content-center flex-wrap gap-4">
-      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="btn btn-primary d-flex align-items-center px-5 py-3" style="font-size: 1.2rem;">
-        <img src="assets/img/ebay-logo.png" alt="eBay" style="height: 32px; margin-right: 12px;">
-        Visit eBay Shop
+      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank">
+        <img src="assets/img/ebay-logo.png" alt="eBay" class="shop-logo">
       </a>
 
-      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="btn btn-success d-flex align-items-center px-5 py-3" style="font-size: 1.2rem;">
-        <img src="assets/img/vinted-logo.png" alt="Vinted" style="height: 32px; margin-right: 12px;">
-        Visit Vinted Shop
+      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank">
+        <img src="assets/img/vinted-logo.png" alt="Vinted" class="shop-logo">
       </a>
     </div>
   </div>
 </section>
 
-<!-- Optional additional CSS -->
+<!-- CSS (add to your main CSS file or inside <style> tag) -->
 <style>
 .shop-section {
   background-color: #f9f9f9;
 }
 
-.shop-section .btn {
-  border-radius: 10px;
-  font-weight: 600;
-  transition: transform 0.2s ease, background-color 0.3s ease;
+.shop-logo {
+  height: 60px; /* Adjust as needed: 60–80px is usually clean */
+  transition: transform 0.2s ease;
+  border-radius: 12px;
 }
 
-.shop-section .btn:hover {
-  transform: scale(1.05);
+.shop-logo:hover {
+  transform: scale(1.08);
 }
 </style>
+
 
 
     <!-- Portfolio Section -->
