--- a/index.html
+++ b/index.html
@@ -192,45 +192,55 @@
 <section id="shop" class="shop-section section-bg py-5">
   <div class="container text-center" data-aos="fade-up">
     <h2 class="mb-4">Shop</h2>
-    <p class="mb-4">Find our items on:</p>
+    <p class="mb-4">Find our latest items on these platforms:</p>
 
     <div class="d-flex justify-content-center flex-wrap gap-4">
       <!-- eBay Button -->
-      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="btn btn-light shop-btn">
+      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="shop-btn">
         <img src="assets/img/ebay-logo.png" alt="eBay" class="shop-btn-logo">
+        <span class="ms-2">eBay Shop</span>
       </a>
 
       <!-- Vinted Button -->
-      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="btn btn-light shop-btn">
+      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="shop-btn">
         <img src="assets/img/vinted-logo.png" alt="Vinted" class="shop-btn-logo">
+        <span class="ms-2">Vinted Shop</span>
       </a>
     </div>
   </div>
 </section>
 
-<!-- CSS (place in your <style> or CSS file) -->
+<!-- ======= CSS Styling ======= -->
 <style>
 .shop-section {
   background-color: #f9f9f9;
+  padding: 60px 0;
 }
 
 .shop-btn {
-  padding: 15px 20px;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  transition: transform 0.2s ease, background-color 0.3s ease;
+  background-color: #000;
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 10px;
+  font-weight: 600;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .shop-btn:hover {
+  background-color: #222;
   transform: scale(1.05);
-  background-color: #e0e0e0;
 }
 
 .shop-btn-logo {
-  height: 48px; /* adjust size here (48–64px works well) */
-  display: block;
+  height: 28px;
+  width: auto;
 }
 </style>
+
 
 
 
