--- a/index.html
+++ b/index.html
@@ -188,21 +188,23 @@
 
     </section><!-- /Stats Section -->
 
+Shop (linking to your Vinted/eBay pages)
+
 <!-- ======= Shop Section ======= -->
 <section id="shop" class="shop-section section-bg py-5">
   <div class="container text-center" data-aos="fade-up">
     <h2 class="mb-4">Shop</h2>
-    <p class="mb-4">Find our latest items on these platforms:</p>
+    <p class="mb-4">Find our latest items on:</p>
 
     <div class="d-flex justify-content-center flex-wrap gap-4">
       <!-- eBay Button -->
-      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="shop-btn">
+      <a href="https://www.ebay.co.uk/usr/your-shop" target="_blank" class="btn shop-btn">
         <img src="assets/img/ebay-logo.png" alt="eBay" class="shop-btn-logo">
         <span class="ms-2">eBay Shop</span>
       </a>
 
       <!-- Vinted Button -->
-      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="shop-btn">
+      <a href="https://www.vinted.co.uk/member/your-shop" target="_blank" class="btn shop-btn">
         <img src="assets/img/vinted-logo.png" alt="Vinted" class="shop-btn-logo">
         <span class="ms-2">Vinted Shop</span>
       </a>
@@ -210,22 +212,23 @@
   </div>
 </section>
 
-<!-- ======= CSS Styling ======= -->
+
+
+
+<!-- CSS -->
 <style>
 .shop-section {
   background-color: #f9f9f9;
-  padding: 60px 0;
 }
 
 .shop-btn {
   background-color: #000;
   color: #fff;
-  padding: 12px 24px;
+  padding: 12px 20px;
   border-radius: 10px;
   font-weight: 600;
   display: inline-flex;
   align-items: center;
-  justify-content: center;
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
@@ -240,7 +243,6 @@
   width: auto;
 }
 </style>
-
 
 
 
