--- a/index.html
+++ b/index.html
@@ -233,8 +233,9 @@ Shop (linking to your Vinted/eBay pages)
 }
 
 .shop-btn:hover {
-  background-color: #222;
-  transform: scale(1.05);
+  height: 60px; /* Adjust as needed: 60–80px is usually clean */
+  transition: transform 0.2s ease;
+  border-radius: 12px;
 }
 
 .shop-btn-logo {
