--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@ Shop (linking to your Vinted/eBay pages)
   padding: 15px 20px;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  transition: transform 0.2s ease, background-color 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .shop-btn:hover {
-  transform: scale(1.05);
-  background-color: #e0e0e0;
+  transform: scale(1.1);
+  background-color: #918e8e;
 }
 
 .shop-btn-logo {
-  height: 48px; /* adjust size here (48–64px works well) */
+  height: 60px; /* adjust size here (48–64px works well) */
   display: block;
 }
 </style>
