--- a/index.html
+++ b/index.html
@@ -217,15 +217,19 @@ Shop (linking to your Vinted/eBay pages)
 }
 
 .shop-btn {
-  padding: 15px 20px;
+  padding: 20px 25px;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  transition: transform 0.3s ease, background-color 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.2s ease;
+
+  background-color: #c9c5c5;
+  color: #fff;
+  
 }
 
 .shop-btn:hover {
   transform: scale(1.1);
-  background-color: #918e8e;
+  background-color: #adaaaa;
 }
 
 .shop-btn-logo {
