--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@ Shop (linking to your Vinted/eBay pages)
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   transition: transform 0.3s ease, background-color 0.2s ease;
 
-  background-color: #c9c5c5;
+  background-color: #ededed;
   color: #fff;
   
 }
 
 .shop-btn:hover {
   transform: scale(1.1);
-  background-color: #adaaaa;
+  background-color: #dbdbdb;
 }
 
 .shop-btn-logo {
