--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="aboutus" class="about section">
+  <section id="aboutus" class="about section section-bg py-5">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -144,7 +144,7 @@
     
 
     <!-- Stats Section -->
-    <section id="stats" class="stats section">
+    <section id="stats" class="stats section section-bg py-5">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -188,10 +188,8 @@
 
     </section><!-- /Stats Section -->
 
-Shop (linking to your Vinted/eBay pages)
-
 <!-- ======= Shop Section ======= -->
-<section id="shop" class="shop-section section-bg py-5">
+<section id="shop" class="shop-section">
   <div class="container text-center" data-aos="fade-up">
     <h2 class="mb-4">Shop</h2>
     <p class="mb-4">Find our items on:</p>
@@ -243,7 +241,7 @@ Shop (linking to your Vinted/eBay pages)
 
 
     <!-- Portfolio Section -->
-    <section id="featureditems" class="portfolio section light-background">
+    <section id="featureditems" class="portfolio section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -428,7 +426,7 @@ Shop (linking to your Vinted/eBay pages)
     </section><!-- /Portfolio Section -->
 
     <!-- Services Section -->
-    <section id="ourprocess" class="services section">
+    <section id="ourprocess" class="services section section-bg py-5">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -497,7 +495,7 @@ Shop (linking to your Vinted/eBay pages)
     </section><!-- /Services Section -->
 
 <!-- ======= FAQ Section ======= -->
-<section id="faq" class="faq section light-background">
+<section id="faq" class="faq section">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
