--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg2.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg1.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>The Vive</h2>
@@ -106,8 +106,7 @@
       
       <!-- Left Column: Two Images -->
       <div class="col-lg-4 d-flex flex-column align-items-center">
-        <img src="assets/img/my-profile-img2.jpg" class="img-fluid rounded shadow mb-3" alt="">
-        <img src="assets/img/about-extra.jpg" class="img-fluid rounded shadow" alt="">
+        <img src="assets/img/hero-bg2.jpg" class="img-fluid rounded shadow mb-3" alt="">
       </div>
 
       <!-- Right Column: Text -->
