--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>The Vive</title>
@@ -54,6 +56,12 @@
   <a href="https://twitter.com" class="twitter" target="_blank"><i class="bi bi-twitter-x"></i></a>
   <a href="https://instagram.com/yourusername" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
   <a href="https://linkedin.com/in/yourusername" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+     <a href="https://www.ebay.com/yourshop" target="_blank" class="ebay">
+  <i class="fab fa-ebay"></i>
+</a>
+<a href="https://www.vinted.com/yourshop" target="_blank" class="vinted">
+  <i class="fab fa-vinted"></i> <!-- Vinted might not be in FA, then use an image -->
+</a>
 </div>
 
 
