--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
      <a href="https://www.ebay.com/yourshop" target="_blank" class="ebay">
   <i class="fab fa-ebay"></i>
 </a>
-<a href="https://www.vinted.com/yourshop" target="_blank" class="vinted">
-  <i class="fab fa-vinted"></i> <!-- Vinted might not be in FA, then use an image -->
-</a>
+<a href="https://www.vinted.com/yourshop" class="vinted" target="_blank">
+    <img src="assets/icons/vlogo.png" alt="Vinted" style="width:24px; height:24px; vertical-align: middle;">
+  </a>
+</div>
 </div>
 
 
