--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <i class="fab fa-ebay"></i>
 </a>
 <a href="https://www.vinted.com/yourshop" class="vinted" target="_blank">
-    <img src="assets/img/vlogo.png" alt="Vinted" style="width:24px; height:24px; vertical-align: middle;">
+    <img src="assets/img/vlogo.png" alt="" style="width:24px; height:24px; vertical-align: middle;">
   </a>
 </div>
 </div>
