--- a/index.html
+++ b/index.html
@@ -825,6 +825,12 @@
   }
 </script>
 
+  <style>
+    .social-links a svg {
+  vertical-align: middle;
+  margin-top: 2px; /* Adjust as needed */
+}
+  </style>
 
 
 
