--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
               <button type="submit">Send Message</button>
             </div>
           </div>
+          <input type="hidden" name="_redirect" value="https://aarnavdurm.github.io/vine/thankyou.html" />
         </form>
       </div><!-- End Contact Form -->
 
