--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ Hello
               <button type="submit">Send Message</button>
             </div>
           </div>
-          <input type="hidden" name="_redirect" value="https://aarnavdurm.github.io/vine/thankyou.html" />
+          <input type="hidden" name="https://aarnavdurm.github.io/vine/thankyou.html" value="https://aarnavdurm.github.io/vine/thankyou.html" />
         </form>
       </div><!-- End Contact Form -->
 
